[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyGizwits"
dynamic = ["version"]
description = 'A wrapper for Gizwits OpenAPI and websocket API'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "brendann993", email = "brendann993@icloud.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiohttp",
  "pyee"
]

[project.urls]
Documentation = "https://github.com/brendann993/pyGizwits#readme"
Issues = "https://github.com/brendann993/pyGizwits/issues"
Source = "https://github.com/brendann993/pyGizwits"
Download = "https://github.com/brendann993/pyGizwits/releases"

[tool.hatch.version]
path = "src/pyGizwits/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "isort>=5.10.0",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/pyGizwits tests}"
style = [
  "black --check --diff {args:.}",
]
fmt = [
  "isort {args:.}",
  "black {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.coverage.run]
source_pkgs = ["pyGizwits", "tests"]
branch = true
parallel = true
omit = [
  "src/pyGizwits/__about__.py",
]

[tool.coverage.paths]
pyGizwits = ["src/pyGizwits", "*/pyGizwits/src/pyGizwits"]
tests = ["tests", "*/pyGizwits/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
